--- a/data_intro.Rmd
+++ b/data_intro.Rmd
@@ -1,8 +1,7 @@
 ---
-title: "About the data"
+title: "About the Data"
 output: 
   html_document:
-    
     toc: false
     toc_float: false
     fontsize: 14px
